--- a/index.html
+++ b/index.html
@@ -16,29 +16,17 @@
 	
 	<body>
 		<div ng-app="matcalc" ng-controller="matcalcCtrl" ng-init="init()">
-			<form>
-			<div class="form-row">
-				<div class="form-group">
-					<div class="col">
-						<div class="form-control">
-							<input type="button" value="-"></input>
-							<input type="text"></input>
-							<input type="button" value="+"></input>
-						</div>
-					</div>
-					<div class="col">
-						<div class="form-control">
-							<select name="recipeSelector" ng-model="recipe" ng-options="recipe as recipe.name for recipe in recipes">
-							</select>
-						</div>
-					</div>
-				</div>
-			</div>
-			</form>
-			{{ recipe.name }} <br/>
-			{{ recipe.type }} <br/>
-			{{ recipe.mats }} <br/>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<input type="number" class="form-control col-md-1 mr-2"></input>
+				<select name="recipeSelector" ng-model="recipe" ng-options="recipe as recipe.name for recipe in recipes" class="form-control"></select>
+			</nav>
+			
+			<ul>
+				<li ng-repeat="ingredient in recipe.mats">{{ ingredient.qty }} {{ ingredient.id }}
+			</ul>
+			
 		</div>
+			
 		<script src="matcalcApp.js"></script>
 		<script src="matcalcCtrl.js"></script>
 	</body>
