update ingredients list to reflect changes on backend

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</nav>
 			
 			<ul>
-				<li ng-repeat="ingredient in recipe.mats">{{ ingredient.qty }} {{ ingredient.id }}
+				<li ng-repeat="ingredient in recipe.mats">{{ ingredient.qty }} {{ ingredient.recipe.name}}
 			</ul>
 			
 		</div>
