add isComplete function to recipe to make template more readable

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 				<span ng-if="recipe.quantity > 0">
 					<input ng-model="recipe.have" type="number" class="ml-2"></input> / <b>{{ recipe.quantity }}</b>
 				</span>
-				<span ng-class="{'ml-1': !recipe.quantity, 'complete': (recipe.have >= recipe.quantity)}">
+				<span ng-class="{'ml-1': !recipe.quantity, 'complete': recipe.isComplete()}">
 					{{ recipe.name }}
-					<span class="fa fa-check" ng-show="(recipe.have >= recipe.quantity)"></span>
+					<span class="fa fa-check" ng-show="recipe.isComplete()"></span>
 				</span>
-				<ul ng-if="recipe.tree" ng-class="(recipe.have >= recipe.quantity) ? 'collapse' : 'expand'">
+				<ul ng-if="recipe.tree" ng-class="(recipe.isComplete()) ? 'collapse' : 'expand'">
 					<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false}" ng-include="'recipeTree'" class="pt-2">
 				</ul>
 			</script>
