--- a/recipetree.html
+++ b/recipetree.html
@@ -7,5 +7,5 @@
 	<span class="fa fa-check" ng-show="recipe.isComplete()"></span>
 </span>
 <ul ng-if="recipe.tree" ng-class="(recipe.isComplete()) ? 'collapse' : 'expand'">
-	<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false}" mc-recipe-tree class="pt-2">
+	<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false}" mc-recipe-tree recipe="recipe" class="pt-2">
 </ul>
