--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 			<nav class="navbar navbar-light bg-light">
 				<form class="form-inline col-6">
 					<input type="text" ng-model="search" placeholder="Search" class="form-control mr-2 col-8"></input>
-					<button type="submit" ng-click="doSearch()" class="btn btn-primary form-control">
+					<button type="submit" ng-click="doSearch()" class="btn btn-primary form-control mr-1">
 						Search <i class="fa fa-spinner fa-spin" ng-show="isSearching"></i>
+					</button>
+					<button type="button" ng-click="clearAll()" class="btn btn-secondary form-control">
+						Clear All
 					</button>
 				</form>
 				<form class="form-inline col-6">
