--- a/recipetree.html
+++ b/recipetree.html
@@ -1,4 +1,4 @@
-<img ng-src="{{ recipe.icon }}" width="40" height="40">
+<img ng-src="{{ recipe.icon }}" class="icon" width="40" height="40">
 <span ng-if="recipe.quantity > 0">
 	<input type="number" ng-model="recipe.have" class="quantity ml-1" max="{{recipe.quantity}}"> / <b>{{ recipe.quantity }}</b>
 </span>
