--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 						<div class="card">
 							<div class="card-header text-center">
 								<a href="#{{ $index }}" data-toggle="collapse"><img ng-src="{{ recipe.icon }}" class="header float-left" width="50" height="50"></a>
-								<h4 class="card-title">{{ recipe.name }}</h4>
+								<h4 class="card-title">
+									<a href="{{ recipe.url }}" target="_blank">{{ recipe.name }}</a>
+								</h4>
 								<p class="card-text">{{ recipe.class_name }} {{ recipe.level }}</p>
 								<a href="#" ng-click="delete($index)" class="cancel"><i class="fa fa-times fa-lg"></i></a>
 							</div>
