add collapse all button

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 					<button type="submit" ng-click="doSearch()" class="btn btn-primary form-control mr-1">
 						Search <i class="fa fa-spinner fa-spin" ng-show="isSearching"></i>
 					</button>
-					<button type="button" ng-click="clearAll()" class="btn btn-secondary form-control">
-						Clear All
+					<button type="button" ng-click="clearAll()" class="btn btn-danger form-control mr-1" title="Remove all selected recipes.">
+						Remove All
+					</button>
+					<button type="button" ng-click="collapseAll = !collapseAll" class="btn btn-secondary form-control">
+						{{ (collapseAll) ? "Expand All" : "Collapse All" }}
 					</button>
 				</form>
-				<form class="form-inline col-6">
+				<form class="form-inline col-5">
 					<select name="recipeSelector" ng-model="recipeSelection" ng-options="recipe as recipe.name for recipe in recipes | orderBy: 'name'" class="form-control col-12">
 						<option value="" selected="selected">
 							{{ (recipes.length > 0) ? "Choose a recipe below!" : "No recipes yet. Search for one to the left!" }}
@@ -48,7 +51,7 @@
 								<p class="card-text">{{ recipe.class_name }} {{ recipe.level }}</p>
 								<a href="#" ng-click="delete($index)" class="cancel"><i class="fa fa-times fa-lg"></i></a>
 							</div>
-							<div id="{{ $index }}" class="card-body collapse show">
+							<div id="{{ $index }}" class="card-body collapse" ng-class="(collapseAll) ? '' : 'show'">
 								<div class="list">
 									<ul>
 										<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false}" mc-recipe-tree recipe="recipe" class="mb-2">
