--- a/recipetree.html
+++ b/recipetree.html
@@ -1,3 +1,4 @@
+<i class="fa px-1" ng-show="recipe.tree" ng-class="(recipe.collapsed) ? 'fa-caret-right' : 'fa-caret-down'"></i>
 <img ng-src="{{ recipe.icon }}" class="icon" width="40" height="40" ng-click="recipe.collapsed = !recipe.collapsed" ng-class="(recipe.tree) ? 'clickable' : ''">
 <span ng-if="recipe.quantity > 0">
 	<input type="number" ng-model="recipe.have" class="quantity ml-1"> / <b>{{ recipe.quantity }}</b>
@@ -7,5 +8,5 @@
 	<i class="fa fa-check" ng-show="(recipe.have >= recipe.quantity)"></i>
 </span>
 <ul ng-if="recipe.tree" id="{{ $index }}" ng-class="((recipe.have >= recipe.quantity) || recipe.collapsed) ? '' : 'show'" class="collapse">
-	<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false}" mc-recipe-tree recipe="recipe" class="my-2">
+	<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false} | orderBy: recipe.collapsed" mc-recipe-tree recipe="recipe" class="my-2">
 </ul>
