--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</nav>
 
 			<div class="container-fluid px-4">
-				<div class="row no-gutters">
+				<div class="row no-gutters" id="recipeList">
 					<div class="col-3" ng-repeat="recipe in selectedRecipes">
 						<div class="card">
 							<div class="card-header text-center">
@@ -67,5 +67,10 @@
 			
 		<script src="matcalcApp.js"></script>
 		<script src="matcalcCtrl.js"></script>
+		<script>
+		$( function() {
+			$("#recipeList").sortable();
+		});
+		</script>
 	</body>
 </html>	
