--- a/recipetree.html
+++ b/recipetree.html
@@ -1,4 +1,4 @@
 <span mc-recipe recipe="recipe"></span>
 <ul ng-if="recipe.tree" ng-class="((recipe.have >= recipe.quantity) || recipe.collapsed) ? '' : 'show'" class="collapse">
-	<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false} | orderBy: recipe.collapsed" mc-recipe-tree recipe="recipe" class="my-2">
+	<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false}" mc-recipe-tree recipe="recipe" class="my-2">
 </ul>
