--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
 				<form class="form-inline col-6">
 					<input type="text" ng-model="search" placeholder="Search" class="form-control mr-2 col-6"></input>
 					<button type="submit" ng-click="doSearch()" class="btn btn-primary form-control mr-1">
-						Search <i class="fa fa-spinner fa-spin" ng-show="isSearching"></i>
+						<i class="fa fa-lg p-1" ng-class="(isSearching) ? 'fa-spinner fa-spin' : 'fa-search'" title="Search"></i>
 					</button>
-					<button type="button" ng-click="clearAll()" class="btn btn-danger form-control mr-1" title="Remove all selected recipes.">
-						Remove All
+					<button type="button" ng-click="collapseAll = !collapseAll" class="btn btn-secondary form-control mr-1">
+						<i class="fa fa-expand fa-lg p-1" ng-show="collapseAll" title="Expand all recipes"></i>
+						<i class="fa fa-compress fa-lg p-1" ng-show="!collapseAll" title="Collapse all recipes"></i>
 					</button>
-					<button type="button" ng-click="collapseAll = !collapseAll" class="btn btn-secondary form-control">
-						{{ (collapseAll) ? "Expand All" : "Collapse All" }} <i class="fa" ng-class="(collapseAll) ? 'fa-caret-right' : 'fa-caret-down'"></i>
+					<button type="button" class="btn btn-danger" ng-click="clearAll()" title="Remove all recipes">
+						<i class="fa fa-trash fa-lg p-1"></i>
 					</button>
 				</form>
-				<form class="form-inline col-4">
+				<form class="form-inline col-5">
 					<select name="recipeSelector" ng-model="recipeSelection" ng-options="recipe as recipe.name for recipe in recipes | orderBy: 'name'" class="form-control col-12">
 						<option value="" selected="selected">
-							{{ (recipes.length > 0) ? "Choose a recipe below!" : "No recipes yet. Search for one to the left!" }}
+							{{ (recipes.length > 0) ? "Choose a recipe!" : "No recipes yet. Search for one!" }}
 						</option>
 					</select>
 				</form>
