rename files / app to craftomatic, update readme

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	
 	<body>
-		<div ng-app="matcalc" ng-controller="matcalcCtrl" ng-init="init()">
+		<div ng-app="craftomatic" ng-controller="craftomaticCtrl" ng-init="init()">
 			<nav class="navbar navbar-light bg-light">
 				<form class="form-inline col-6">
 					<input type="text" ng-model="search" placeholder="Search" class="form-control mr-2 col-6"></input>
@@ -66,7 +66,7 @@
 		
 		</div>
 			
-		<script src="matcalcApp.js"></script>
-		<script src="matcalcCtrl.js"></script>
+		<script src="craftomaticApp.js"></script>
+		<script src="craftomaticCtrl.js"></script>
 	</body>
 </html>	
