--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 							<div class="card-header text-center">
 								<a href="#{{ $index }}" data-toggle="collapse"><img ng-src="{{ recipe.icon }}" class="header float-left" width="50" height="50"></a>
 								<h4 class="card-title">
-									<a href="{{ recipe.url }}" target="_blank">{{ recipe.name }}</a>
+									{{ recipe.name }}
 								</h4>
 								<p class="card-text">{{ recipe.class_name }} {{ recipe.level }}</p>
 								<a href="#" ng-click="delete($index)" class="cancel"><i class="fa fa-times fa-lg"></i></a>
 							</div>
-							<div id="{{ $index }}" class="card-body collapse" ng-class="(collapseAll) ? '' : 'show'">
+							<!--<div id="{{ $index }}" class="card-body collapse" ng-class="(collapseAll) ? '' : 'show'">
 								<div class="list">
 									<ul>
 										<li ng-repeat="recipe in recipe.tree | filter:{isCrystal : false} | orderBy: 'tree'" mc-recipe-tree recipe="recipe" class="mb-2">
 									</ul>
 								</div>
-							</div>
+							</div>-->
 						</div>
 					</div>
 				</div>
