now including full tree of submats

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<div id="{{ $index }}" class="card-body collapse" ng-class="(collapseAll) ? '' : 'show'">
 								<div class="list">
 									<ul>
-										<li ng-repeat="ingredient in recipe.ingredients" mc-recipe recipe="ingredient" class="mb-2">
+										<li ng-repeat="ingredient in recipe.ingredients" mc-recipe-tree recipe="ingredient" class="mb-2">
 									</ul>
 								</div>
 							</div>
