--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</button>
 				</form>
 				<form class="form-inline col-5">
-					<select name="recipeSelector" ng-model="recipeSelection" ng-options="recipe as recipe.name for recipe in recipes | orderBy: 'name'" class="form-control col-12">
+					<select name="recipeSelector" ng-model="recipeSelection" ng-options="recipe as recipe.name + ' (' + recipe.class_name + ')' for recipe in recipes | orderBy: 'name'" class="form-control col-12">
 						<option value="" selected="selected">
 							{{ (recipes.length > 0) ? "Choose a recipe!" : "No recipes yet. Search for one!" }}
 						</option>
@@ -69,4 +69,4 @@
 		<script src="craftomaticApp.js"></script>
 		<script src="craftomaticCtrl.js"></script>
 	</body>
-</html>	
+</html>
